starlark-rust/starlark_syntax/src/syntax/def_tests/positional_only_in_standard_dialect_def.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
def test(/, x): pass

Error: error: / positional-only-arguments is not allowed in this dialect
 --> test.star:1:10
  |
1 | def test(/, x): pass
  |          ^
  |
